# D4.10

./: README.md  pyproject.toml  requirements.txt
my_site/: db.sqlite3
my_site/common/: urls.py
my_site/my_site/: settings.py  urls.py
my_site/p_library/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
my_site/p_library/templates/: base.html  book_send.html  friend_add.html  friend_detail.html  friends.html  index.html  publishers.html
my_site/templates/: base.html
my_site/templates/registration/: logged_out.html  login.html
